--- a/src/content/next-learn/route/index.mdx
+++ b/src/content/next-learn/route/index.mdx
@@ -10,7 +10,8 @@
 | `app/page.tsx` | '/' |
 | `app/about/page.tsx` | '/about' |
 
-### Dynamic routes 动态路由
+### [Dynamic routes 动态路由](./route/dynamic-routes.mdx)
+
 
 | 语法          | 是否必需 | 示例匹配路径 | 不匹配路径 |
 |---------------|----------|--------------|------------|
@@ -18,7 +19,7 @@
 | `[...param]`  | 是       | `/a/b/c`     | `/`        |
 | `[[...param]]`| 否       | `/a/b/c` 或 `/` | 无       |
 
-### 路由组和私有文件夹 Route Groups and private folders
+### [路由组和私有文件夹 Route Groups and private folders](./route/groups-private.mdx)
 
 
 | 写法 | 路由 |
@@ -28,7 +29,7 @@
 | `_folder` | 不生成路由 |
 
 
-### Parallel routes 并行路由
+### [Parallel routes 并行路由](./route/parallel.mdx)
 
 | 写法 | 路由 |
 | --- | --- |
