--- a/src/content/vue3/reactive/effect.mdx
+++ b/src/content/vue3/reactive/effect.mdx
@@ -3,6 +3,9 @@
 ### 依赖收集
 依赖收集是 Vue 响应式系统的核心机制，它负责追踪数据属性和副作用函数（如组件的渲染函数）之间的关系，确保当数据变化时能精确触发相关更新。
 
+#### 为什么进行依赖收集？
+
+
 依赖收集的核心原理
 在 Vue 中，依赖收集是通过读取操作触发的。当访问响应式对象的属性时，系统会记录"谁（哪个副作用函数）在读取这个属性"，从而建立依赖关系。
 
